@@ -138,7 +138,7 @@ function Reporter::conn_weird%(name: string, c: connection, addl: string &defaul
 ## Returns: true if the file was still valid, else false.
 function Reporter::file_weird%(name: string, f: fa_file, addl: string &default=""%): bool
 	%{
-	auto fuid = f->AsRecordVal()->Lookup(0)->AsStringVal();
+	auto fuid = f->AsRecordVal()->GetField(0)->AsStringVal();
 	auto file = file_mgr->LookupFile(fuid->CheckString());
 
 	if ( ! file )
